--- a/lib/localization/l10n/app_ur.arb
+++ b/lib/localization/l10n/app_ur.arb
@@ -125,6 +125,8 @@
   "wishList": "خواہش کی فہرست",
   "wishListIsEmpty": "افوہ! خواہش خالی ہے...",
   "letAddSome": "آئیے کچھ شامل کرتے ہیں۔",
+   "changeLanguage":"زبان تبدیل کریں",
+   "language":"زبان",
   "store": "اسٹور",
   "logout": "لاگ آوٹ",
   "continues": "جاری رہے",
